--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,60 @@
     width:100%;
   }
 };
+.wd-100{
+  width : 100px;
+}
+.wd-110{
+  width : 110px;
+}.wd-120{
+  width : 120px;
+}.wd-130{
+  width : 130px;
+}.wd-135{
+  width : 135px;
+}.wd-140{
+  width : 140px;
+}
+.wd-145{
+  width : 145px;
+}
+.wd-150{
+  width : 150px;
+}
+.wd-155{
+  width : 155px;
+}
+.wd-160{
+  width : 160px;
+}
+.priceRangeForm{
+  margin: 60px 0 0 0 !important;
+}
+
+.ui-slider .ui-btn-inner {
+  padding: 4px 0 0 0 !important;
+}
+
+.ui-slider-popup {
+  position: absolute !important;
+  width: 64px;
+  height: 64px;
+  text-align: center;
+  font-size: 36px;
+  padding-top: 14px;
+  z-index: 100;
+  opacity: 0.8;
+}
+
+.goto-page{position: relative;
+    display: block;
+    padding: 7px 0.75rem;
+    margin-left: -1px;
+    line-height: 1.25;
+    color: #080808;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    }
 .m-b-60{
   margin-bottom:60px !important;
 }
