--- a/src/app/clientside/clientpages/landing_page/footer/footer.component.html
+++ b/src/app/clientside/clientpages/landing_page/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div id="copyright">
           <div class="container">
               <div class="row">
-                  <div class="col-md-10 text-center text-md-left"> &copy; Copyright <strong><span>© 2019-2020 Prototype</span></strong>. All Rights Reserved<a href="https://padhyasoft.com/" class="external" style="color: white;"> Designed by <a style="color: white;" target="blank" href="https://padhyasoft.com/">Padhya Software Technologies</a></a>.</div>
+                  <div class="col-md-10 text-center text-md-left"> &copy; Copyright <strong><span>© {{currentYear - 1}}-{{currentYear}} Prototype</span></strong>. All Rights Reserved<a href="https://padhyasoft.com/" class="external" style="color: white;"> Designed by <a style="color: white;" target="blank" href="https://padhyasoft.com/">Padhya Software Technologies</a></a>.</div>
                   <div class="col-md-2 text-center text-md-right"><img src="/assets/img/imagesclient/img-payment.png" alt="payments accepted"></div>
               </div>
           </div>
