--- a/src/app/clientside/clientpages/subcategory/subcategory.component.html
+++ b/src/app/clientside/clientpages/subcategory/subcategory.component.html
@@ -82,23 +82,15 @@
               </div>
           </div>
 
-          <!-- <div class="card sidebar-menu m-b-70">
+          <div class="card sidebar-menu m-b-70">
             <div class="card-header d-flex align-items-center justify-content-between">
-                <h5 class="mb-0 text-uppercase">Price </h5>
+                <h5 class="mb-0 text-uppercase">Price</h5>
             </div>
             <div class="card-body">
-                <form class="priceRangeForm">
-
-                  <ion-range-slider #sliderElement  type="" [min]="0"  max="100" from_min="0" from_shadow="true" to_max="100" to_shadow="true" grid="true" grid_num="10"
-                      prefix=""
-                      postfix=""
-                      decorate_both="true"
-                  >
-                  </ion-range-slider>
-
-                </form>
+                  <ng5-slider [(value)]="minPrice" [(highValue)]="maxPrice" [options]="options" (mouseleave)="GetItemsByPriceFilter()"></ng5-slider>
+                  <!-- <input type="text" [(ngModel)]="minPrice" (keypress)="GetItemsByPriceFilter()">  <input type="text" [(ngModel)]="maxPrice" (keypress)="GetItemsByPriceFilter()"> -->
             </div>
-        </div> -->
+        </div>
         </div>
           <div class="box text-center col-md-9 offset-md-3">
               <div class="row">
@@ -116,16 +108,16 @@
               <div class="col-md-12">
                   <div class="info-bar">
                       <div class="row">
-                          <div class="col-lg-4 products-showing">Showing <strong>{{showingItems}}</strong> of <strong>{{totalItems}}</strong> products</div>
+                          <div class="col-lg-4 products-showing">Showing <strong>{{ totalItems == 0 ? 0 : showingItems}}</strong> of <strong>{{totalItems}}</strong> products</div>
                           <div class="col-lg-8 products-number-sort">
                               <form class="form-inline"></form>
                               <div class="row">
                                   <div class="col-6 col-lg-6">
                                     <ul class="products-sort-by d-flex  pagination justify-content-center">
                                       <strong>Show </strong>
-                                      <select class="goto-page" #mySelect (change)='GetItemByPageSize(mySelect.value)'>
-                                        <!-- <option value="0">All</option> -->
-                                        <option *ngFor='let item  of ShowItemList' value="{{item}}" [attr.selected]="item == pageSize ? true : null">{{item}}</option>
+                                      <select class="goto-page" #mySelect (change)='GetItemByPageSize(mySelect.value)' [disabled] = "totalItems == 0">
+                                        <option value="" *ngIf="totalItems == 0" [attr.selected]="totalItems == 0?true : null">0</option>
+                                        <option *ngFor='let item  of ShowItemList'  value="{{item}}" [attr.selected]="item == pageSize ? true : null">{{item}}</option>
                                         <option value="0">All</option>
                                       </select>
                                   </ul>
@@ -134,7 +126,7 @@
                                   <div class="col-6 col-lg-6">
                                       <div class="d-flex justify-content-end">
                                           <strong>Sort by</strong>
-                                          <select name="sort-by" #sortby class=" m-l-10 goto-page wd-155"  (change)='GetItemSortBy(sortby.value)'>
+                                          <select name="sort-by" #sortby class=" m-l-10 goto-page wd-155"  (change)='GetItemSortBy(sortby.value)' [disabled] = "totalItems == 0">
                                             <option *ngFor='let item  of SortByList' value="{{item.id}}" [attr.selected]="item.id == sortBy ? true : null">{{item.name}}</option>
                                           </select>
                                       </div>
@@ -179,8 +171,8 @@
                 </div> -->
                   <div class="row products">
 
-                    <div class="col-md-4 col-sm-6" *ngFor='let item4  of Item_Masters; let isFirst = firstl'>
-                      <div class="product">
+                    <div class="col-md-4 col-sm-6" *ngFor='let item4  of Item_Masters; let isFirst = firstl' (*ngIf)="totalItems > 0">
+                      <div class="product" >
                           <div class="image">
                               <a href="#" data-toggle="modal" data-target="#product-quick-view-modal"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
                               <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
@@ -235,7 +227,7 @@
                           <!-- /.ribbon-->
                       </div>
                       <!-- /.product-->
-                  </div>
+                    </div>
                       <!-- /.col-md-4-->
                       <div id="product-quick-view-modal" tabindex="-1" role="dialog" aria-hidden="false" class="modal fade">
                           <div class="modal-dialog modal-lg">
@@ -301,10 +293,15 @@
                           <!-- /.modal-dialog-->
                       </div>
                       <!-- /.modal-->
+
+
+                  </div>
+                  <div class="text-center text-theme f-18" *ngIf="totalItems == 0">
+                    <span > {{noRecordFound}}</span>
                   </div>
                   <!-- /.products-->
 
-                  <nav aria-label="Page navigation example m-b-40" style="margin-bottom: 120px !important;">
+                  <nav aria-label="Page navigation example m-b-40" style="margin-bottom: 120px !important;" *ngIf="totalItems>0">
                     <ul class="pagination justify-content-center">
                       <li class="page-item disabled">
                         <a class="page-link" tabindex="-1">Go to page</a>
