--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,12 @@
     width:100%;
   }
 };
+.text-theme{
+  color: #fc6e00 !important;
+}
+.cursor-pointer{
+  cursor:pointer;
+}
 .wd-100{
   width : 100px;
 }
@@ -48,6 +54,24 @@
   padding: 4px 0 0 0 !important;
 }
 
+.cart-display .minicart-wrapmain{
+  position: absolute;
+    top: 63px;
+    right: 15px;
+    z-index: 10;
+    background-color: white;
+    /* border: 1px solid darkgrey; */
+    box-shadow: 2px 2px 4px 0px #00000061;
+    width: 45%;
+    // display:none;
+    opacity: 0;
+    transition: opacity 1s 0s;
+}
+.cart-display:hover .minicart-wrapmain{
+  // display:block;
+  opacity: 1;
+  transition: opacity 0.5s;
+}
 .ui-slider-popup {
   position: absolute !important;
   width: 64px;
