Image upload and download in Vehicle Mst by RG

--- a/src/app/AdminPanel/pages/auth/login/basic-login/basic-login.component.html
+++ b/src/app/AdminPanel/pages/auth/login/basic-login/basic-login.component.html
@@ -86,7 +86,7 @@
                   <strong>Developed By <a href="https://padhyasoft.com/" target="_blank">Padhya Software Technologies</a></strong>
               </small>
               <small class="ml-4 ml-sm-5 mb-2">
-                  <strong>Copyright &copy; 2019-2020 Prototype</strong>
+                  <strong>Copyright &copy; {{currentYear-1}}-{{currentYear}} Prototype</strong>
               </small>
           </div>
       </div>
