--- a/src/app/clientside/clientpages/checkpincode/checkpincode.component.scss
+++ b/src/app/clientside/clientpages/checkpincode/checkpincode.component.scss
@@ -41,7 +41,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 
 body {
 
-  background-image:url('../../../../assets/img/img/1001.jpg');
+  // background-image:url('../../../../assets/img/img/1001.jpg');
   background-position:center;
   background-size:cover;
   background-attachment: fixed;
