--- a/src/app/clientside/clientpages/landing_page/header/header.component.html
+++ b/src/app/clientside/clientpages/landing_page/header/header.component.html
@@ -10,7 +10,8 @@
           </div>
       </div>
       <div class="container">
-          <a href="index.html" class="navbar-brand home"><img src="assets/img/logo/logo.png" alt="Minimal logo" style="height: 44px;" class="d-none d-md-inline-block"><img src="assets/img/logo/logo.png" alt="Minimal logo" class="d-md-none"><span class="sr-only">Prototype - go to homepage</span></a>
+          <a href="index.html" class="navbar-brand home"><img src="assets/img/logo/logo.png" alt="Minimal logo" style="height: 44px;" class="d-none d-md-inline-block">
+            <img src="assets/img/logo/logo.png" alt="Minimal logo" class="d-md-none" style="width:120px;"><span class="sr-only">Prototype - go to homepage</span></a>
           <div class="navbar-buttons d-lg-none">
 
               <!-- <button type="button" data-toggle="modal" data-target="#login-modal" class="btn btn-outline-secondary mr-1"><a href="login"><i class="icofont-ui-user"></i></a><i class="fa fa-users"></i></button> -->
