--- a/src/app/clientside/clientpages/subcategory/subcategory.component.html
+++ b/src/app/clientside/clientpages/subcategory/subcategory.component.html
@@ -1,6 +1,6 @@
 
 
-<div id="all" class="">
+<div id="all" class="" style="margin-top: 15px;">
   <div id="content">
       <div class="container">
           <ul class="breadcrumb justify-content-md-end justify-content-center">
