--- a/src/app/AdminPanel/pages/city-master/city-list/city-list.component.html
+++ b/src/app/AdminPanel/pages/city-master/city-list/city-list.component.html
@@ -26,7 +26,7 @@
               <tr>
                   <th pSortableColumn="State_Name">State Name <p-sortIcon field="State_Name"></p-sortIcon></th>
                   <th pSortableColumn="City_Name">City Name <p-sortIcon field="City_Name"></p-sortIcon></th>
-                  <th pSortableColumn="Post_Code">Post Code<p-sortIcon field="Post_Code"></p-sortIcon></th>
+                  <!-- <th pSortableColumn="Post_Code">Post Code<p-sortIcon field="Post_Code"></p-sortIcon></th> -->
                   <th >Action </th>
               </tr>
               <tr>
@@ -51,9 +51,9 @@
                   <td>
                     {{item.City_Name}}
                   </td>
-                  <td>
+                  <!-- <td>
                     {{item.Post_Code}}
-              </td>
+              </td> -->
                   <td>
                           <a class="ti-pencil-alt edit" (click)="openEditPage(item.City_ID,item.State_ID)"></a>
                           &nbsp;<a class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.City_ID,item.State_ID)"></a>
