--- a/src/app/AdminPanel/pages/street-master/add-edit-street/add-edit-street.component.html
+++ b/src/app/AdminPanel/pages/street-master/add-edit-street/add-edit-street.component.html
@@ -39,6 +39,10 @@
       </div>
     </div>
     <div class="form-group row">
+       <label class="col-sm-2 col-form-label">Post Code</label>
+      <div class="col-sm-4">
+        <input class="form-control" type="text" [(ngModel)]="streetObj.Post_Code" id="Post_Code" [ngModelOptions]="{standalone: true}" min="0">
+      </div>
       <label class="col-sm-2 col-form-label">Status</label>
       <div class="col-sm-4">
         <select class="form-control" [(ngModel)]="streetObj.Status" id="Status"
