--- a/src/app/clientside/clientpages/checkpincode/checkpincode.component.html
+++ b/src/app/clientside/clientpages/checkpincode/checkpincode.component.html
@@ -1,5 +1,6 @@
 
 <body>
+  <img src="../../../../assets/img/img/1001.jpg" style="position: fixed;width: 100%;height: 100%;">
   <div class="container">
 
     <div class="row ml-lg-10 ml-md-10 "  *ngIf="showpicodemodel==true">
@@ -22,13 +23,13 @@
               {{errorMessage}}
              </span>
              <div class="wrapper">
-              <span class="group-btn">
-                <button  class="btn btn-primary">
-                  <span class="spinner-border spinner-border-sm mr-1"></span>
-                  Check Pincode <i class="fa fa-sign-in"></i>
-              </button>
-              </span>
-      </div>
+                <span class="group-btn">
+                  <button  class="btn btn-primary">
+                    <span class="spinner-border spinner-border-sm mr-1"></span>
+                    Check Pincode <i class="fa fa-sign-in"></i>
+                  </button>
+                </span>
+              </div>
             </form>
 
         </div>
@@ -42,7 +43,7 @@
       <div class="col-md-2" ></div>
       <div class="col-md-offset-8 col-md-8 text-center">
         <!-- <h1 class='text-white'>Prototype Login Form</h1> -->
-          <div class="form-login">
+          <div class="form-login" style="margin-bottom: 65px !important;">
             <h4>Create an account</h4>
             <form autocomplete="off">
               <div class="form-group">
