--- a/src/app/clientside/clientpages/login_client/login_client.component.scss
+++ b/src/app/clientside/clientpages/login_client/login_client.component.scss
@@ -1,5 +1,5 @@
 body {
-  background-image:url('../../../../assets/img/img/lb4.jpg');
+  // background-image:url('../../../../assets/img/img/lb4.jpg');
   background-position:center;
   background-size:cover;
 
